--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* accent color = 46629c */
+* accent color = 46629c */
  body {
      display: flex;
      justify-content: center;
@@ -159,4 +159,3 @@
  #fullscreen-icon {
     font-size: 14px;
 }
- 
