--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@
 }
  #footerContent i.material-icons {
      font-size: 20px;
-     padding-top: 20/px;
+     padding-top: 20px;
      float:right;
 }
  #track_info_div i.material-icons {
@@ -118,7 +118,7 @@
 }
  .fade:hover {
      opacity: 1;
-}
+} 
  .parent {
      position: relative;
      top: 0;
