--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
      background-size: cover;
      background-position: center;
 }
- h1, h2, h3, h4, h5 {
+ h1, h2, h3, h4, h5, ul {
      color: #FFFFFF;
 }
  h1 {
@@ -35,6 +35,8 @@
      */
 }
  div {
+    
+    
 }
  h2 {
      margin-bottom: 5px;
@@ -86,7 +88,7 @@
 }
  #footerContent i.material-icons {
      font-size: 20px;
-     padding-top: 20px;
+     
      float:right;
 }
  #track_info_div i.material-icons {
@@ -151,11 +153,53 @@
      width: 100%;
      overflow: auto;
 }
+#extra-side
+{
+    float:right;
+    width: 30%;
+}
+#extra-main
+{
+    float:left;
+    width: 65%;
+    padding-left:20px;
+}
+#albums img {
+  height:15px;
+  width: 15px;
+  margin-right:5px;    
+     
+}
+
+#albums ul {
+  list-style-type: none;
+    margin-left: 0;
+  padding-left: 0;
+font-size:12px;
+    
+}
+
+#albums li {
+  display: flex;
+  align-items: center;
+    
+}
+
+#albums span {
+    padding-bottom: 3px;
+}
  #footerContent {
-     width:50%;
+     width:80%;
      padding: 10px;
      padding-bottom:40px;
 }
+
+#top-bar{
+    width:100%;
+    float:left;
+   
+}
+
  #fullscreen-icon {
-    font-size: 14px;
+   /* font-size: 14px;*/
 }
