--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@
      bottom: 0;
      width: 100%;
      overflow: auto;
+     
 }
 #extra-side
 {
@@ -163,6 +164,7 @@
     float:left;
     width: 65%;
     padding-left:20px;
+    padding-bottom: 20px;
 }
 #albums img {
   height:15px;
@@ -178,7 +180,7 @@
 font-size:12px;
     
 }
- 
+
 #albums li {
   display: flex;
   align-items: center;
@@ -205,7 +207,7 @@ margin-top: 1em ;
   margin-bottom: 1em ;
 }
 #wikipedia {
-    padding-bottom:40px;
+   /* padding-bottom:40px;*/
 }
 
  #fullscreen-icon {
