--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 }
  h1, h2, h3, h4, h5, ul {
      color: #FFFFFF;
-}
+} 
  h1 {
      font-size: 52px;
      margin: 0px;
@@ -51,7 +51,7 @@
      margin-bottom: 10px;
      font-weight: 100;
 }
- h4 {
+ h5 {
      font-size: 13px;
      margin-top: 10px;
      margin-right: 7px;
@@ -60,8 +60,11 @@
      color: #F5F5F5;
      font-weight: 400;
 }
- h5 {
-     font-size: 12px;
+ h4 {
+     font-size: 20px;
+      font-weight: 400;
+      margin-top: 10px;
+      margin-bottom: 0px;
 }
  p {
      margin-top: 0px;
@@ -166,14 +169,18 @@
     padding-left:20px;
     padding-bottom: 20px;
 }
-#albums img {
+#extra-side img {
   height:15px;
   width: 15px;
   margin-right:5px;    
      
 }
 
-#albums ul {
+#relations {
+  display: flex;
+  flex-direction: row;
+}
+#extra-side ul {
   list-style-type: none;
     margin-left: 0;
   padding-left: 0;
@@ -181,7 +188,7 @@ font-size:12px;
     
 }
 
-#albums li {
+#extra-side li {
   display: flex;
   align-items: center;
     
