Shifter to deezer api
Back-end improvement to the api, shift to deezer which offers faster album search and more accurate results.

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 #all_content {
-    width: 80%;
+    width: 90%;
     height: 80%;
     position: fixed;
     overflow: scroll;
@@ -262,6 +262,16 @@ a:active {
 }
 
 #extra-side img {
+    width: 100%;
+}
+
+#relations img,
+#albums img {
+    width: 15px;
+    height: 15px;
+}
+
+#extra-main img {
     height: 15px;
     width: 15px;
     margin-right: 5px;
