--- a/style.css
+++ b/style.css
@@ -6,18 +6,50 @@ html {
     font-family: 'Heebo', sans-serif;
     background-color: #1A1A1A;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#background {
-    position: fixed;
-    top: 0;
-    left: 0;
+
+/* this is main */
+
+#all_content {
     width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-size: cover;
-    background-position: center;
 }
+
+#container {
+    width: 90%;
+    margin: auto;
+    min-width: 90%;
+}
+
+#cover-info {
+    width: 49%;
+    float: left;
+}
+
+#cover-info img {
+    width: 100%;
+}
+
+#buffer {
+    margin: 0px;
+    padding: 0px;
+    display: block;
+}
+
+#mb-album-art {}
+
+#track_info_div {
+    width: 49%;
+    float: right;
+    margin-left: 1%;
+    min-width: 49%;
+}
+
+
+/* this is sidebar */
 
 #side-bar {
     width: 20px;
@@ -26,31 +58,6 @@ html {
     position: fixed;
     left: 0;
     background-color: #1A1A1A;
-}
-
-#all_content {
-    height: 100%;
-}
-
-#centering {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
-
-#container {
-    display: flex;
-    width: 90%;
-}
-
-#cover-info {
-    width: 50%;
-    height: 50%;
-}
-
-#all_content {
-    height: 100%;
 }
 
 .content {
@@ -171,27 +178,6 @@ a:active {
     padding-bottom: 8px;
     /* border: 1px solid #46629c;
      */
-}
-
-#container {
-    display: flex;
-    width: 90%;
-    min-height: 84%;
-}
-
-#track_info_div {
-    overflow-y: auto;
-    max-width: 50%;
-    margin-left: 20px;
-}
-
-#cover-info {
-    width: 50%;
-}
-
-#cover-info img {
-    max-width: 100%;
-    max-height: 100%;
 }
 
 .fade {
