--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
     height: 100%;
     margin: 0;
     overflow: hidden;
-    font-family: 'Heebo', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
     background-color: #1A1A1A;
     overflow: hidden;
     display: flex;
@@ -92,7 +92,7 @@ ul {
 }
 
 h1 {
-    font-size: 42px;
+    font-size: 48px;
     margin: 0px;
     margin-bottom: 10px;
     font-weight: 400;
