--- a/style.css
+++ b/style.css
@@ -256,6 +256,8 @@ a:active {
 #albums img {
     width: 15px;
     height: 15px;
+    margin-left: 3px;
+    margin-right: 3px;
 }
 
 #extra-main img {
